<resources>
    <string name="app_name">VegKey</string>
    <string name="title_activity_syntaxa">SyntaxaActivity</string>
    <string name="settings_title">Settings</string>
    <string name="setting_title_background">Background</string>
    <string name="setting_title_switch1">Yellowstone</string>
    <string name="setting_title_switch2">Rice</string>
    <string name="setting_title_switch3">Black</string>
    <string name="setting_button_back">Back</string>
    <string name="setting_title2_Language">Language</string>
    <string name="setting_title2_switch1">Czech</string>
    <string name="setting_title2_switch2">English</string>
    <string name="setting_title3_Language">Inserting Species Names In Key</string>
    <string name="setting_title3_switch1">Czech</string>
    <string name="setting_title3_switch2">Latin</string>
    <string name="setting_title4_Language">Syntaxa (Habitat) Names</string>
    <string name="setting_title4_switch1">Czech (Latin)</string>
    <string name="setting_title4_switch2">Latin (Czech)</string>
    <string name="setting_title5_Language">Taxa Names In Synopsis</string>
    <string name="setting_title5_switch1">Czech (Latin)</string>
    <string name="setting_title5_switch2">Latin</string>
    <string name="setting_title6_Language">Syntaxonomical Level</string>
    <string name="setting_title6_switch1">Associations</string>
    <string name="setting_title6_switch2">Alliances</string>
    <string name="main_region">Region:</string>
    <string name="main_region_text">Czech Republic</string>
    <string name="main_source">Source:</string>
    <string name="main_source_text">Chytrý M. (ed.) 2007-13. Vegetation of the Czech Republic. Vol. 1–4. Academia, Prague.</string>
    <string name="main_button1">Vegetation Key</string>
    <string name="Main_button2">List of Vegetation Units</string>
    <string name="PBkey_title">Select typical species:</string>
    <string name="PBkey_title2">(mark dominant or subdominant\nspecies with cover higher\nthan 25% in the list)</string>
    <string name="PBkey_button1">Add Species</string>
    <string name="PBkey_button2">Remove Checked</string>
    <string name="PBkey_button3">Clear Table</string>
    <string name="PBkey_button4">Back</string>
    <string name="PBkey_button5">Identify Vegetation</string>
    <string name="PBkey_message1">Select some species first!</string>
    <string name="PBkey_message2">What type of vegetation do you study?</string>
    <string name="PBkey_message2_A1">   FOREST (SHRUBBY)  </string>
    <string name="PBkey_message2_A2">   NON-FOREST   </string>
    <string name="PBkey_message3">Do you want to clear list?</string>
    <string name="PBkey_message3_A1">  YES  </string>
    <string name="PBkey_message3_A2">  NO  </string>
    <string name="Search_title">Add new species (3+3 chars):</string>
    <string name="Search_button1">Back</string>
    <string name="Search_button2">Clear</string>
    <string name="Search_button3">Add</string>
    <string name="Syntaxa_title">List of Vegetation Units</string>
    <string name="Syntaxa_title2">Percentage probability\nof correct assignment</string>
    <string name="Syntaxa_title3">(Tap on proper row to show details)</string>
    <string name="Syntaxa_Button">Back</string>
    <string name="Veginfo_title">Unit Description</string>
    <string name="Veginfo_Biotope_Caption">Possible Habitat:</string>
    <string name="Veginfo_Biotope">(Habitat Catalogue of the Czech Republic)</string>
    <string name="Veginfo_Dg">Diagnostic Species:</string>
    <string name="Veginfo_Co">Constant Species:</string>
    <string name="Veginfo_Do">Dominant Species:</string>
    <string name="Veginfo_Char">Characteristics:</string>
    <string name="Veginfo_Button1">PLADIAS Web Page</string>
    <string name="Veginfo_Button2">Back</string>
    <string name="SD_title">Complete List of Units</string>
    <string name="SD_Button">Back</string>


</resources>
