<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="portrait"
    tools:context=".ProbabilisticKey">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/db1_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/tema"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/PBkey_title"
                android:textColor="#FFEE00"
                android:textSize="25dp"
                android:shadowColor="#000000"
                android:shadowDx="3"
                android:shadowDy="2.6"
                android:shadowRadius="1.6"

                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:textStyle="bold"
                android:textColor="#DDDDDD"
                android:textAlignment="center"
                android:paddingHorizontal="20dp"
                android:shadowColor="#000000"
                android:shadowDx="1.5"
                android:shadowDy="1.3"
                android:shadowRadius="1.6"

                android:text="@string/PBkey_title2"/>

            <ListView
                android:id="@+id/listView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="20dp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight=".5"
            android:gravity="center|bottom"
            android:layout_alignParentBottom="true"
            android:padding="10dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:shadowColor="#FFFFFF"
                android:shadowDx="1.5"
                android:shadowDy="1.3"
                android:shadowRadius="1.6"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:textSize="18dp"
                style="@style/Widget.AppCompat.Button"
                android:text="@string/PBkey_button1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button2"
                    android:layout_width="match_parent"
                    android:layout_weight=".8"
                    android:layout_height="wrap_content"
                    android:shadowColor="#FFFFFF"
                    android:shadowDx="1.5"
                    android:shadowDy="1.3"
                    android:shadowRadius="1.6"
                    android:textAllCaps="false"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    style="@style/Widget.AppCompat.Button"
                    android:text="@string/PBkey_button2" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="match_parent"
                    android:layout_weight="1.2"
                    android:layout_height="wrap_content"
                    android:shadowColor="#FFFFFF"
                    android:shadowDx="1.5"
                    android:shadowDy="1.3"
                    android:shadowRadius="1.6"
                    android:textAllCaps="false"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    style="@style/Widget.AppCompat.Button"
                    android:text="@string/PBkey_button3" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:shadowColor="#FFFFFF"
                android:shadowDx="1.5"
                android:shadowDy="1.3"
                android:shadowRadius="1.6"
                android:textAllCaps="false"
                android:textSize="18dp"
                android:textStyle="bold"
                style="@style/Widget.AppCompat.Button"
                android:text="@string/PBkey_button4" />

            <Button
                    android:id="@+id/button4"
                    android:layout_width="match_parent"
                    android:layout_weight=".3"
                    android:layout_height="wrap_content"
                    android:shadowColor="#FFFFFF"
                    android:shadowDx="1.5"
                    android:shadowDy="1.3"
                    android:shadowRadius="1.6"
                    android:textAllCaps="false"
                    android:textStyle="bold"
                    android:textSize="18dp"
                    style="@style/Widget.AppCompat.Button"
                    android:text="@string/PBkey_button5"/>

       </LinearLayout>
    </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>