<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="portrait"
    tools:layout_editor_absoluteY="25dp"
    tools:context=".SyntaxaActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/db1_root"
        android:background="@drawable/tema"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textColor="#FFEE00"
                android:textAlignment="center"
                android:textSize="25dp"
                android:shadowColor="#000000"
                android:shadowDx="1.5"
                android:shadowDy="1.3"
                android:shadowRadius="1.6"
                android:textStyle="bold"
                android:text="@string/Syntaxa_title"
                />
            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:textStyle="bold"
                android:textColor="#DDDDDD"
                android:textAlignment="center"
                android:paddingHorizontal="20dp"
                android:shadowColor="#000000"
                android:shadowDx="1.5"
                android:shadowDy="1.3"
                android:shadowRadius="1.6"
                android:text="@string/Syntaxa_title2"/>

            <TextView
                android:id="@+id/textView22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="10dp"
                android:textStyle="bold"
                android:textColor="#DDDDDD"
                android:textAlignment="center"
                android:paddingHorizontal="20dp"
                android:shadowColor="#000000"
                android:shadowDx="1.5"
                android:shadowDy="1.3"
                android:shadowRadius="1.6"
                android:text="@string/Syntaxa_title3"/>

            <ListView
                android:id="@+id/listView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="20dp"
                android:choiceMode="singleChoice"
                android:paddingHorizontal="20dp"
                android:divider="#AA8000"
                android:dividerHeight="5px"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight=".15"
            android:gravity="center|bottom"
            android:layout_alignParentBottom="true"
            android:padding="10dp"
            android:orientation="vertical" >

            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:shadowColor="#FFFFFF"
                android:shadowDx="1.5"
                android:shadowDy="1.3"
                android:shadowRadius="1.6"
                style="@style/Widget.AppCompat.Button"
                android:textSize="18dp"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:text="@string/Syntaxa_Button" />

        </LinearLayout>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>