<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="portrait"
    tools:layout_editor_absoluteY="25dp"
    tools:context=".SyntaxaActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/db1_root"
        android:background="@drawable/tema"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical" >

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textColor="#FFEE00"
                android:textSize="25dp"
                android:shadowColor="#000000"
                android:shadowDx="1.5"
                android:shadowDy="1.3"
                android:shadowRadius="1.6"
                android:textStyle="bold"
                android:text="@string/Veginfo_title"
                />

             <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:textAlignment="center"
                android:paddingBottom="10dp"
                android:text="AAA01 Aaaaaa aaaa-Bbbbb bbbb"
                android:textColor="@android:color/holo_orange_dark"
                android:shadowColor="#000000"
                android:shadowDx="1.5"
                android:shadowDy="1.3"
                android:shadowRadius="1.6"
                android:textSize="20dp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/textViewMin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:textAlignment="center"
                android:paddingBottom="10dp"
                android:text="AAA01 Aaaaaa aaaa-Bbbbb bbbb"
                android:textColor="@android:color/holo_orange_light"
                android:shadowColor="#000000"
                android:shadowDx="1.5"
                android:shadowDy="1.3"
                android:shadowRadius="1.6"
                android:textSize="14dp"
                android:textStyle="bold" />
        </LinearLayout>

            <ScrollView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center|top"
                android:layout_weight="20">

                <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="8dp">

                <TextView
                    android:id="@+id/textView111"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="10dp"
                    android:text="@string/Veginfo_Biotope_Caption"
                    android:textColor="#FFC080"
                    android:shadowColor="#000000"
                    android:shadowDx="1.5"
                    android:shadowDy="1.3"
                    android:shadowRadius="1.6"
                    android:textSize="18dp"
                    android:textStyle="bold" />
                    <TextView
                        android:id="@+id/textView112"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="10dp"
                        android:text="@string/Veginfo_Biotope"
                        android:textColor="#FFC080"
                        android:shadowColor="#000000"
                        android:shadowDx="1.5"
                        android:shadowDy="1.3"
                        android:shadowRadius="1.6"
                        android:textSize="12dp"
                        android:textStyle="normal" />
                <TextView
                    android:id="@+id/textViewBiotope"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="10dp"
                    android:textAlignment="center"
                    android:paddingBottom="10dp"
                    android:text="AAA01 Aaaaaa aaaa-Bbbbb bbbb"
                    android:textColor="#FFFFFF"
                    android:shadowColor="#000000"
                    android:shadowDx="1.5"
                    android:shadowDy="1.3"
                    android:shadowRadius="1.6"
                    android:textSize="14dp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="10dp"
                    android:textColor="#FFC080"
                    android:text="@string/Veginfo_Dg"
                    android:textSize="18dp"
                    android:shadowColor="#000000"
                    android:shadowDx="1.5"
                    android:shadowDy="1.3"
                    android:shadowRadius="1.6"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dp"
                    android:paddingRight="5dp"
                    android:textAlignment="gravity"
                    android:gravity="left"
                    android:textColor="#FFFFFF"
                    android:text="Aaaa aaa, Bbbb bbb"
                    android:shadowColor="#000000"
                    android:textSize="16dp"
                    android:shadowDx="1.5"
                    android:shadowDy="1.3"
                    android:shadowRadius="1.6"
                    />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="10dp"
                    android:textColor="#FFC080"
                    android:text="@string/Veginfo_Co"
                    android:textSize="18dp"
                    android:shadowColor="#000000"
                    android:shadowDx="1.5"
                    android:shadowDy="1.3"
                    android:shadowRadius="1.6"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dp"
                    android:paddingRight="5dp"
                    android:textAlignment="gravity"
                    android:gravity="left"
                    android:textColor="#FFFFFF"
                    android:text="Aaaa aaa, Bbbb bbb"
                    android:textSize="16dp"
                    android:shadowColor="#000000"
                    android:shadowDx="1.5"
                    android:shadowDy="1.3"
                    android:shadowRadius="1.6"
                    />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="10dp"
                    android:textColor="#FFC080"
                    android:text="@string/Veginfo_Do"
                    android:textSize="18dp"
                    android:shadowColor="#000000"
                    android:shadowDx="1.5"
                    android:shadowDy="1.3"
                    android:shadowRadius="1.6"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dp"
                    android:paddingRight="5dp"
                    android:textAlignment="gravity"
                    android:gravity="left"
                    android:textColor="#FFFFFF"
                    android:text="Aaaa aaa, Bbbb bbb"
                    android:textSize="16dp"
                    android:shadowColor="#000000"
                    android:shadowDx="1.5"
                    android:shadowDy="1.3"
                    android:shadowRadius="1.6"
                    />
                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="10dp"
                        android:textColor="#FFC080"
                        android:text="@string/Veginfo_Char"
                        android:textSize="18dp"
                        android:shadowColor="#000000"
                        android:shadowDx="1.5"
                        android:shadowDy="1.3"
                        android:shadowRadius="1.6"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="15dp"
                        android:paddingRight="5dp"
                        android:textAlignment="gravity"
                        android:gravity="left"
                        android:textColor="#FFFFFF"
                        android:text=""
                        android:textSize="16dp"
                        android:shadowColor="#000000"
                        android:shadowDx="1.5"
                        android:shadowDy="1.3"
                        android:shadowRadius="1.6"
                        />



                </LinearLayout>
        </ScrollView>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:gravity="center|bottom"
            android:layout_alignParentBottom="true"
            android:padding="10dp"
            android:orientation="vertical" >
            <Button
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:shadowColor="#FFFFFF"
                android:shadowDx="1.5"
                android:shadowDy="1.3"
                android:shadowRadius="1.6"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:textSize="18dp"
                style="@style/Widget.AppCompat.Button"
                android:text="@string/Veginfo_Button1" />


        <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:shadowColor="#FFFFFF"
                android:shadowDx="1.5"
                android:shadowDy="1.3"
                android:textAllCaps="false"
                android:textStyle="bold"
                style="@style/Widget.AppCompat.Button"
                android:textSize="18dp"
                android:shadowRadius="1.6"
                android:text="@string/Veginfo_Button2" />

        </LinearLayout>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>